--- a/.github/workflows/pipeline-validation.yml
+++ b/.github/workflows/pipeline-validation.yml
@@ -2,7 +2,7 @@ name: Pipeline Validation
 
 on:
   pull_request:
-    branches: [ main, develop ]
+    branches: [ master, develop ]
     paths:
       - '.github/workflows/**'
       - 'k8s/**'
