--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -213,6 +213,34 @@ jobs:
           name: performance-report
           path: performance-report.html
 
+          
+  # SonarQube Analysis
+  sonarqube:
+    runs-on: ubuntu-latest
+    needs: [tests]
+    if: github.event_name == 'pull_request' || github.event_name == 'push' || github.event.pull_request.base.ref == 'master' || github.event.pull_request.base.ref == 'develop'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Download test results
+        uses: actions/download-artifact@v3
+        with:
+          name: test-results
+
+      - name: Download security reports
+        uses: actions/download-artifact@v3
+        with:
+          name: security-reports
+
+      - name: SonarQube Scan
+        uses: sonarsource/sonarqube-quality-gate-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+
   # Docker Build & Security Scan
   docker:
     runs-on: ubuntu-latest
@@ -295,33 +323,6 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
           repository: ${{ env.DOCKER_HUB_IMAGE }}
           readme-filepath: ./README.md
-
-  # SonarQube Analysis
-  sonarqube:
-    runs-on: ubuntu-latest
-    needs: [tests]
-    if: github.event_name != 'pull_request' || github.event.pull_request.base.ref == 'main'
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Download test results
-        uses: actions/download-artifact@v3
-        with:
-          name: test-results
-
-      - name: Download security reports
-        uses: actions/download-artifact@v3
-        with:
-          name: security-reports
-
-      - name: SonarQube Scan
-        uses: sonarqube-quality-gate-action@master
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
   # Notify CI completion
   notify-ci-completion:
