--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,10 @@
-name: CI/CD Pipeline
+name: CI Pipeline
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ master, develop ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
 env:
   PYTHON_VERSION: '3.9'
@@ -218,28 +218,45 @@ jobs:
   sonarqube:
     runs-on: ubuntu-latest
     needs: [tests]
-    if: github.event_name == 'pull_request' || github.event_name == 'push' || github.event.pull_request.base.ref == 'master' || github.event.pull_request.base.ref == 'develop'
+    if: |
+      github.event_name == 'pull_request' ||
+      github.event_name == 'push' ||
+      (github.event_name == 'pull_request' && (github.event.pull_request.base.ref == 'master' || github.event.pull_request.base.ref == 'develop'))
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Download test results
-        uses: actions/download-artifact@v3
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v4
         with:
-          name: test-results
+          python-version: '3.11.9'
 
-      - name: Download security reports
-        uses: actions/download-artifact@v3
-        with:
-          name: security-reports
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install sonar-scanner
 
       - name: SonarQube Scan
-        uses: sonarsource/sonarqube-quality-gate-action@master
+        uses: sonarsource/sonarqube-scan-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+
+      # - name: SonarQube Quality Gate check
+      #   id: sonarqube-quality-gate-check
+      #   uses: sonarsource/sonarqube-quality-gate-action@master
+      #   with:
+      #     pollingTimeoutSec: 600
+      #   env:
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      #     SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+
+      # - name: Show Quality Gate status
+      #   run: |
+      #     echo "Quality Gate status: ${{ steps.sonarqube-quality-gate-check.outputs.quality-gate-status }}"
 
   # Docker Build & Security Scan
   docker:
@@ -316,7 +333,7 @@ jobs:
           path: sbom.spdx.json
 
       - name: Update Docker Hub description
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        if: github.ref == 'refs/heads/master' && github.event_name == 'push'
         uses: peter-evans/dockerhub-description@v3
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
